fixed alignment for img and temp

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -30,7 +30,7 @@
 }
 .Weather img {
   height: 64px;
-
+  width: 64px;
   margin-right: 10px;
 }
 .Weather .temperature {
